--- a/nesmClient/src/view/FriendListJFrame.form
+++ b/nesmClient/src/view/FriendListJFrame.form
@@ -283,6 +283,9 @@
                       <Image iconType="3" name="/view/groupChat.png"/>
                     </Property>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JLabel" name="jLabel1">
                   <Properties>
